--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,7 @@ title: 欢迎来到我的博客
 author: GitHub junjieweb
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  在这里为您的新网站写一个很棒的描述。您可以在 _config.yml 中编辑此行。它将出现在您的文档头部元数据（用于 Google 搜索结果）和您的 feed.xml 站点描述中。
 
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
