--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: 欢迎来到我的博客
 author: GitHub junjieweb
-email: your-email@domain.com
+email: junjieweb@qq.com
 description: > # this means to ignore newlines until "baseurl:"
   在这里为您的新网站写一个很棒的描述。您可以在 _config.yml 中编辑此行。它将出现在您的文档头部元数据（用于 Google 搜索结果）和您的 feed.xml 站点描述中。
 
