--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@ title: 欢迎来到我的博客
 author: GitHub junjieweb
 email: junjieweb@qq.com
 description: > # this means to ignore newlines until "baseurl:"
-  在这里为您的新网站写一个很棒的描述。您可以在 _config.yml 中编辑此行。它将出现在您的文档头部元数据（用于 Google 搜索结果）和您的 feed.xml 站点描述中。
+  # 在这里为您的新网站写一个很棒的描述。您可以在 _config.yml 中编辑此行。它将出现在您的文档头部元数据（用于 Google 搜索结果）和您的 feed.xml 站点描述中。
 
 # 社交链接
-twitter_username: your-twitter-handle # 不要包含 @ 字符，否则构建将失败！
+twitter_username: twitter # 不要包含 @ 字符，否则构建将失败！
 github_username:  junjieweb # 不要包含 @ 字符，否则构建将失败！
 
 show_excerpts: true # 设置为 false 以删除主页上的摘录
